--- a/_includes/nav-home.html
+++ b/_includes/nav-home.html
@@ -7,8 +7,8 @@
               <li class="dropdown link">
                 <a href="#" class="dropbtn">Dropdown ↓</a>
                 <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
+                  <a href="#">Sponsoren</a>
+                  <a href="#">Teilnahmebedingungen</a>
                   <a href="#">Link 3</a>
                 </div>
               </li>
