--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -312,7 +312,7 @@ footer {
     background-color: black;
     color: #eee;
     text-align: center;
-
+    position: absolute;
 }
 /* Add class="video" to video embeds */
 .video {
